--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -97,6 +97,10 @@ li {
 img {
   max-width: 100%;
   height: auto;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 20px;
 }
 
 hr {
