--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -51,12 +51,14 @@
 
       &:hover,
       &.active {
-        background-image: linear-gradient(
-          -90deg,
-          rgba($feedback-color, 1) 0%,
-          rgba($feedback-color, 0.8) 80%,
-          rgba($feedback-color, 0) 100%
-        );
+        // background-image: linear-gradient(
+        //   -90deg,
+        //   rgba($feedback-color, 1) 0%,
+        //   rgba($feedback-color, 0.8) 80%,
+        //   rgba($feedback-color, 0) 100%
+        // );
+        background-color: #F5F2EC;
+        border-radius: 10px;
       }
     }
 
