--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@ layout: table_wrappers
     <div class="site-header">
       <!-- <a href="{{ '/' | absolute_url }}" class="site-title lh-tight">{% include title.html %}</a> -->
       <a href="{{ '/' | absolute_url }}" class="site-title lh-tight">
-        <img src="/assets/images/logo.png" alt="API AutoFlow" style="border: 0; padding: 0;"/>
+        <img src="/assets/images/logo.png" alt="API AutoFlow" style="border: 0; padding: 0; height: 60%; margin: 0 auto;"/>
       </a>
       <a href="#" id="menu-button" class="site-button">
         <svg viewBox="0 0 24 24" class="icon">
