--- a/_includes/in_line_banner.html
+++ b/_includes/in_line_banner.html
@@ -1,4 +1,5 @@
 <div style="width: 100%; padding: 15px; background-color: #f3f5f7; text-align: center">
+  <h3>{{ include.title }}</h3>
   <a href="{{ include.url }}" alt="{{ include.button_name }}">{{ include.button_name }}</a>
   {{ include.message }}
 </div>
